--- a/VS_SYNC.csproj
+++ b/VS_SYNC.csproj
@@ -4,7 +4,6 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Data.Sqlite" Version="5.0.3"/>
-    <PackageReference Include="Dapper.Contrib" Version="2.0.78"/>
+    <PackageReference Include="CommandLineParser" Version="2.8.0"/>
   </ItemGroup>
 </Project>
